add style modification

--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,8 @@ body {
 }
 
 #section_5>div>h1 {
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 5vw;
+  padding-right: 5vw;
   margin-bottom: 2rem;
 }
 
