--- a/src/assets/scss/_home1.scss
+++ b/src/assets/scss/_home1.scss
@@ -419,6 +419,7 @@
                     }
                 }
                 #dog {
+                    background-color: white;
                     position: absolute;
                     border: 5px solid white;
                     top: 3.5vw;
@@ -427,6 +428,9 @@
                     img {
                         width: 25vw;
                     }
+                }
+                #dog:hover {
+                    filter: opacity(50%);
                 }
                 #dragon {
                     top: 14vw;
