updata black button and box button

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -112,6 +112,10 @@
             font-weight: 700;
         }
     }
+    .million:hover {
+        cursor: pointer;
+        background-color: #353434;
+    }
     .how {
         padding: 39px;
         color: black;
